Fixed z-index issue with modal drawers and top bars

--- a/sites/goodmoves/main.scss
+++ b/sites/goodmoves/main.scss
@@ -56,7 +56,7 @@ body {
 }
 .mdc-top-app-bar {
   background-color: white;
-  z-index: 5 !important;
+  z-index: 7 !important;
 }
 h1,
 h2,
@@ -384,6 +384,7 @@ footer h3,
 }
 .mdc-drawer--modal {
   top: 0;
+  z-index: 8;
 }
 .mdc-drawer--occasional-ie11 {
   box-sizing: border-box;
